[tool.poetry]
name = "wmark"
version = "0.1.0"
description = ""
authors = ["nicourrrn <s57111702@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"
qrcode = "^7.4.2"
aiogram = "^2.25.1"
pyotp = "^2.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
